microservices-on-k8s/k8s-menifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: craftista
  labels:
    name: craftista
